--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ profile
 
 ####
 # Xcode temporary files that should never be committed
-# 
+#
 # NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
 
 *~.nib
@@ -36,7 +36,8 @@ DerivedData/
 
 # NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
 
-build/
+Build/Intermediates
+Build/Products/Debug
 
 
 #####
